Graphical interface for the client with javafx.